<resources>
    <string name="app_name">Quiz App - Esportes</string>
    <string name="titulo_1">Teste seu conhecimento sobre esportes!</string>
    <string name="conferir_botao">Conferir</string>
    <string name="refazer_botao">Refazer</string>
    <string name="resposta_edit">digite sua resposta...</string>
    <string name="pergunta_1">1 - Qual é o esporte mais popular no Brasil?</string>
    <string name="pergunta_2">2 - Qual esporte é praticado sobre uma mesa com rede e uma bola saltitante?</string>
    <string name="resposta_2_a">Basquete</string>
    <string name="resposta_2_b">Bilhar</string>
    <string name="resposta_2_c">Pingue-Pongue</string>
    <string name="pergunta_3">3 - Marque as afirmações incorretas:</string>
    <string name="resposta_3_a">Handebol é um esporte jogado com as mãos</string>
    <string name="resposta_3_b">Natação não é um esporte olímpico</string>
    <string name="resposta_3_c">No jogo de boliche não existe bola</string>
    <string name="resposta_3_d">Hipismo é um esporte praticado com cavalos</string>
    <string name="pergunta_4">4 - Com quantos jogadores um time de futebol entra em campo?</string>
    <string name="resposta_4_a">9</string>
    <string name="resposta_4_b">10</string>
    <string name="resposta_4_c">11</string>
    <string name="pergunta_5">5 - Qual dos itens abaixo não é uma prova de atletismo?</string>
    <string name="resposta_5_a">Futebol de salão</string>
    <string name="resposta_5_b">Corrida de obstáculos</string>
    <string name="resposta_5_c">Arremesso de peso</string>
    <string name="pergunta_6">6 - A bola mais pesada pertence a um dos esportes abaixo:</string>
    <string name="resposta_6_a">Voleibol</string>
    <string name="resposta_6_b">Boliche</string>
    <string name="resposta_6_c">Handebol</string>
    <string name="pergunta_7">7 - Em qual dos esportes abaixo não existe rede?</string>
    <string name="resposta_7_a">Voleibol</string>
    <string name="resposta_7_b">Boliche</string>
    <string name="resposta_7_c">Handebol</string>
    <string name="pergunta_8">8 - Marque as afirmações corretas:</string>
    <string name="resposta_8_a">No futebol americano, jogadas com as mãos ou os pés são permitidas</string>
    <string name="resposta_8_b">No voleibol o ponto é quando a bola toca no chão</string>
    <string name="resposta_8_c">No futebol, barreira é um recurso usado para tentar impedir os gols</string>
    <string name="resposta_8_d">A bola do jogo de pingue-pongue é feita de metal</string>
</resources>
